# server/service/product_service.go
@@ -15,6 +15,8 @@ type ProductService interface {
 	GetProductByID(ctx context.Context, id int) (productInfo *types.ProductInfo, err error)
 	PublishProduct(ctx context.Context, id int) error
 	UnpublishProduct(ctx context.Context, id int) error
+	ReviewSubmit(ctx context.Context, id int) error
+	ReviewReject(ctx context.Context, id int) error
 
 	// 商家后台更新商品库存
 	UpdateProductStock(ctx context.Context, id int, newStock int) error
@@ -35,20 +37,9 @@ func GetProductServiceInstance() *ProductServiceImpl {
 }
 
 func (p *ProductServiceImpl) Create(ctx context.Context, product *types.ProductInfo) (productId int, err error) {
-	id, err := p.productDao.CreateProduct(ctx, &model.Product{
-		Name:             product.Name,
-		Category:         product.Category,
-		Price:            product.Price,
-		Desc:             product.Desc,
-		Stock:            product.Stock,
-		PicInfo:          product.PicInfo,
-		Weight:           product.Weight,
-		Material:         product.Material,
-		Capacity:         product.Capacity,
-		Dimensions:       product.Dimensions,
-		CareInstructions: product.CareInstructions,
-		Status:           product.Status,
-	})
+	productModel := product.ToProductModel()
+	productModel.LatestEditorId = getUserId(ctx)
+	id, err := p.productDao.CreateProduct(ctx, productModel)
 	if err != nil {
 		log.Logger.Errorf("ProductService: Failed to create product: %v", err)
 		return -1, err
@@ -66,25 +57,13 @@ func (p *ProductServiceImpl) GetProductByID(ctx context.Context, id int) (produc
 	if product == nil {
 		return nil, nil
 	}
-	return &types.ProductInfo{
-		Name:             product.Name,
-		Category:         product.Category,
-		Price:            product.Price,
-		Desc:             product.Desc,
-		Stock:            product.Stock,
-		PicInfo:          product.PicInfo,
-		Weight:           product.Weight,
-		Material:         product.Material,
-		Capacity:         product.Capacity,
-		Dimensions:       product.Dimensions,
-		CareInstructions: product.CareInstructions,
-		Status:           product.Status,
-	}, nil
+	return types.NewProductInfo(product), nil
 }
 
 const (
 	ProductStatusUnpublished = 0 // 下架状态
 	ProductStatusPublished   = 1 // 上架状态
+	ProductStatusUnderReview = 2 // 审核中状态
 )
 
 // GetProductByID 根据ID获取产品信息 (用户侧， 只有上架的商品才能查看详情页)
@@ -97,20 +76,33 @@ func (p *ProductServiceImpl) GetPublishedProductByID(ctx context.Context, id int
 	if product == nil || product.Status == ProductStatusUnpublished {
 		return nil, nil
 	}
-	return &types.ProductInfo{
-		Name:             product.Name,
-		Category:         product.Category,
-		Price:            product.Price,
-		Desc:             product.Desc,
-		Stock:            product.Stock,
-		PicInfo:          product.PicInfo,
-		Weight:           product.Weight,
-		Material:         product.Material,
-		Capacity:         product.Capacity,
-		Dimensions:       product.Dimensions,
-		CareInstructions: product.CareInstructions,
-		Status:           product.Status,
-	}, nil
+	return types.NewProductInfo(product), nil
+}
+
+// ReviewSubmit 提交审核
+func (p *ProductServiceImpl) ReviewSubmit(ctx context.Context, id int) error {
+	// 获取商品当前信息
+	product, err := p.productDao.GetProductByID(ctx, id)
+	if err != nil {
+		log.Logger.Errorf("PublishProduct: Failed to get product by ID: %v", err)
+		return err
+	}
+	if product == nil {
+		return fmt.Errorf("product not found with ID: %d", id)
+	}
+
+	if product.Status != ProductStatusUnpublished {
+		return fmt.Errorf("only unpublished products can be submitted for review, product ID: %d", id)
+	}
+	oldStatus := int(product.Status)
+	product.Status = ProductStatusUnderReview
+	err = p.productDao.UpdateProductStatus(ctx, id, oldStatus, product)
+	if err != nil {
+		log.Logger.Errorf("ReviewSubmit: Failed to update product status: %v", err)
+		return err
+	}
+	log.Logger.Infof("Product (ID: %d) submitted for review successfully", id)
+	return nil
 }
 
 // PublishProduct 上架商品
@@ -126,12 +118,20 @@ func (p *ProductServiceImpl) PublishProduct(ctx context.Context, id int) error {
 	}
 
 	// 检查当前状态
-	if product.Status == ProductStatusPublished {
-		return fmt.Errorf("product (ID: %d) is already published", id)
+	if product.Status != ProductStatusUnderReview {
+		return fmt.Errorf("product (ID: %d) must be in review for publish", id)
+	}
+	userId := getUserId(ctx)
+	// 审核人跟编辑者不能是同一人
+	if product.LatestEditorId == userId {
+		return fmt.Errorf("the reviewer cannot be the same as the latest editor for product (ID: %d)", id)
 	}
 
+	product.LatestReviewerId = userId
+	oldStatus := int(product.Status)
+	product.Status = ProductStatusPublished
 	// 更新状态为已上架
-	err = p.productDao.UpdateProductStatus(ctx, id, ProductStatusPublished)
+	err = p.productDao.UpdateProductStatus(ctx, id, oldStatus, product)
 	if err != nil {
 		log.Logger.Errorf("PublishProduct: Failed to update product status: %v", err)
 		return err
@@ -140,7 +140,36 @@ func (p *ProductServiceImpl) PublishProduct(ctx context.Context, id int) error {
 	return nil
 }
 
-// UnpublishProduct 下架商品
+// RejectReview 驳回审核
+func (p *ProductServiceImpl) ReviewReject(ctx context.Context, id int) error {
+	product, err := p.productDao.GetProductByID(ctx, id)
+	if err != nil {
+		log.Logger.Errorf("UnpublishProduct: Failed to get product by ID: %v", err)
+		return err
+	}
+	if product == nil {
+		return fmt.Errorf("product not found with ID: %d", id)
+	}
+	if product.Status != ProductStatusUnderReview {
+		return fmt.Errorf("only products under review can be rejected, product ID: %d", id)
+	}
+	userId := getUserId(ctx)
+	if product.LatestEditorId == userId {
+		return fmt.Errorf("the reviewer cannot be the same as the latest editor for product (ID: %d)", id)
+	}
+	product.LatestReviewerId = userId
+	oldStatus := int(product.Status)
+	product.Status = ProductStatusUnpublished
+	err = p.productDao.UpdateProductStatus(ctx, id, oldStatus, product)
+	if err != nil {
+		log.Logger.Errorf("RejectReview: Failed to update product status: %v", err)
+		return err
+	}
+	log.Logger.Infof("Product (ID: %d) review rejected successfully", id)
+	return nil
+}
+
+// UnpublishProduct 商品从上架状态变更为下架状态
 func (p *ProductServiceImpl) UnpublishProduct(ctx context.Context, id int) error {
 	// 获取商品当前信息
 	product, err := p.productDao.GetProductByID(ctx, id)
@@ -157,8 +186,10 @@ func (p *ProductServiceImpl) UnpublishProduct(ctx context.Context, id int) error
 		return fmt.Errorf("product (ID: %d) is already unpublished", id)
 	}
 
+	oldStatus := int(product.Status)
+	product.Status = ProductStatusUnpublished
 	// 更新状态为已下架
-	err = p.productDao.UpdateProductStatus(ctx, id, ProductStatusUnpublished)
+	err = p.productDao.UpdateProductStatus(ctx, id, oldStatus, product)
 	if err != nil {
 		log.Logger.Errorf("UnpublishProduct: Failed to update product status: %v", err)
 		return err
@@ -194,7 +225,7 @@ func (p *ProductServiceImpl) UpdateProductStock(ctx context.Context, id int, new
 	}
 
 	// 更新库存
-	err = p.productDao.UpdateProductStock(ctx, id, newStock)
+	err = p.productDao.UpdateProductStock(ctx, id, newStock, getUserId(ctx))
 	if err != nil {
 		log.Logger.Errorf("UpdateProductStock: Failed to update stock: %v", err)
 		return err
@@ -241,13 +272,13 @@ func (p *ProductServiceImpl) UpdateStockWithCAS(ctx context.Context, id, deta in
 		return err
 	}
 
-	if int(pModel.Stock) + deta < 0 {
+	if int(pModel.Stock)+deta < 0 {
 		log.Logger.Errorf("UpdateStockWithCAS: do not have enough stock, product id: %d, current stock: %d", id, int(pModel.Stock))
 		return fmt.Errorf("do not have enough stock, product id: %d, current stock: %d", id, int(pModel.Stock))
 	}
 
 	newStock := int(pModel.Stock) + deta
-	err = p.productDao.UpdateStockWithCAS(ctx, id, int(pModel.Version), newStock)
+	err = p.productDao.UpdateStockWithCAS(ctx, id, int(pModel.Version), newStock, getUserId(ctx))
 	if err != nil {
 		log.Logger.Errorf("UpdateStockWithCAS: update failed, err:%s", err.Error())
 		return err
@@ -290,8 +321,9 @@ func (p *ProductServiceImpl) UpdateProductInfo(ctx context.Context, req *types.U
 		Weight:           req.Weight,
 		Capacity:         req.Capacity,
 		CareInstructions: req.CareInstructions,
-		Status:           product.Status, // 保持原有状态
+		Status:           product.Status,  // 保持原有状态
 		Version:          product.Version, // 保持原有版本
+		LatestEditorId:   getUserId(ctx),  // 更新编辑者为当前用户
 	}
 
 	// 调用DAO层更新商品信息
@@ -302,4 +334,13 @@ func (p *ProductServiceImpl) UpdateProductInfo(ctx context.Context, req *types.U
 	}
 
 	return nil
+}
+
+func getUserId(ctx context.Context) int {
+	userId, ok := ctx.Value(types.UserIDKey).(int)
+	if !ok {
+		log.Logger.Warn("getUserId: user_id not found in context or invalid type")
+		return 0
+	}
+	return userId
 }
